--- a/docker/gdbgui/Makefile
+++ b/docker/gdbgui/Makefile
@@ -1,8 +1,11 @@
 
-all: build
+all: build   # default -> build 
 
 prepare:
 	cp -r ../../lib .	
+
+clean : prepare
+	docker compose build --no-cache
 
 build: prepare
 	docker compose build
@@ -13,4 +16,5 @@ up: build
 down:
 	docker compose down
 
-	
+debug: up
+	GDBG_NO_FORK=1 GDBG_FIFO_DIR="/opt/otobo/" GDBG_KILL_CMD='docker kill otobo-web-1 -s SIGINT' perl -I /home/mike/workspace/perl/perl-Devel-gdbg/lib/   gdbgui.pl
