--- a/docker/gdbgui/docker-compose.yml
+++ b/docker/gdbgui/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       GDBG_NO_FORK: True
       GDBG_FIFO_DIR: ${GDBG_FIFO_DIR} 
       GDBG_KILL_CMD: ${GDBG_KILL_CMD}
+      GDBG_RESTART_CMD: ${GDBG_RESTART_CMD}
 
 networks:
   otobo_default:
