--- a/docker/gdbgui/docker-compose.yml
+++ b/docker/gdbgui/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        OTOBO_PROJECT_NAME: ${OTOBO_PROJECT_NAME}
       
     networks: 
     - otobo_default
